examples/type_system/failing/114_keyword_alias_case.flx
// parity-expected-stdout-begin
// parity-expected-stdout-end
// parity-expected-stderr-begin
// • 1 error • examples/type_system/failing/114_keyword_alias_case.flx
// error[E030]: Unknown Keyword
//
// Unknown keyword `case`. Flux uses `match` for pattern matching.
//
//   examples/type_system/failing/114_keyword_alias_case.flx:24:5
//    |
// 24 |     case 1 {
//    |     ^^^^
//
// Hint:
//   Did you mean `match`?
//
// Note:
//   while parsing function `main`
// parity-expected-stderr-end
// expect: compile_error
// expect-error: E030

fn main() -> Unit {
    case 1 {
        0 -> 0,
        _ -> 1,
    }
}
